--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 @import "tailwindcss";
+
+@theme {
+  /* Aquí es donde sobrescribes la fuente por defecto 'sans'.
+    --font-sans es una variable CSS que Tailwind usa.
+    La redefinimos para que 'Roboto' sea la primera opción.
+  */
+  --font-sans: "Roboto",
+    /* Añadimos el resto de la pila de fuentes 
+                 del sistema como respaldo, por si Roboto falla.
+               */
+      ui-sans-serif,
+    system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue",
+    Arial, "Noto Sans", sans-serif;
+}
